--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,14 @@
     <string name="app_name">Popular Movies</string>
     <string name="title_activity_settings">Settings</string>
     <string name="action_settings">Settings</string>
-    <string name="warn_no_internet">No internet connection</string>
+    <string name="warn_no_internet">No internet connection - only local content being shown</string>
     <string name="warn_button_retry">RETRY</string>
     <string name="title_activity_detail">MovieDetail</string>
 
     <string name="label_trailers">Videos</string>
     <string name="label_reviews">Reviews</string>
+    <string name="label_trailers_unavailable">Currently no videos available!</string>
+    <string name="label_reviews_unavailable">Currently no reviews available!</string>
 
     <string name="pref_order_label">Order by</string>
     <string name="pref_order_key" translatable="false">orderby</string>
@@ -21,4 +23,8 @@
 
     <string name="content_authority">de.andreasackermann.popularmovies</string>
 
+    <string name="youtube_base_url">http://www.youtube.com/watch?v=</string>
+
+    <string name="menu_share">Share</string>
+    <string name="intro_share">Have a look at </string>
 </resources>
